RESOLVED FIXED198135
[iOS] The shouldIgnoreMetaViewport test option incorrectly persists across layout tests
https://bugs.webkit.org/show_bug.cgi?id=198135
Summary [iOS] The shouldIgnoreMetaViewport test option incorrectly persists across la...
Wenson Hsieh
Reported 2019-05-22 12:28:01 PDT
Attachments
Patch (7.08 KB, patch)
2019-05-22 12:48 PDT, Wenson Hsieh
ap: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews210 for win-future (13.46 MB, application/zip)
2019-05-22 15:10 PDT, EWS Watchlist
no flags
For EWS (7.09 KB, patch)
2019-05-22 16:06 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-05-22 12:48:09 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 2 2019-05-22 15:08:34 PDT
Thanks for the review! > fast/visual-viewport/rtl-nonzoomed-rects.html [ Failure ] > fast/visual-viewport/rtl-zoomed-rects.html [ Failure ] > fast/visual-viewport/rubberbanding-viewport-rects-extended-background.html [ Failure ] > fast/visual-viewport/rubberbanding-viewport-rects-header-footer.html [ Failure ] > fast/visual-viewport/rubberbanding-viewport-rects.html [ Failure ] > fast/visual-viewport/viewport-dimensions.html [ Failure ] > fast/visual-viewport/zoomed-fixed-header-and-footer.html [ Failure ] > fast/visual-viewport/zoomed-fixed-scroll-down-then-up.html [ Failure ] > fast/visual-viewport/zoomed-fixed.html [ Failure ] > fast/visual-viewport/zoomed-rects.html [ Failure ] ...so these started failing after I _fixed_ the timeouts in the other viewport tests :( It seems these tests currently rely on the viewport tests timing out. I'll look into these test failures and find a way to fix them.
EWS Watchlist
Comment 3 2019-05-22 15:10:52 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 4 2019-05-22 15:10:54 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 5 2019-05-22 16:04:03 PDT
(In reply to Wenson Hsieh from comment #2) > Thanks for the review! > > > fast/visual-viewport/rtl-nonzoomed-rects.html [ Failure ] > > fast/visual-viewport/rtl-zoomed-rects.html [ Failure ] > > fast/visual-viewport/rubberbanding-viewport-rects-extended-background.html [ Failure ] > > fast/visual-viewport/rubberbanding-viewport-rects-header-footer.html [ Failure ] > > fast/visual-viewport/rubberbanding-viewport-rects.html [ Failure ] > > fast/visual-viewport/viewport-dimensions.html [ Failure ] > > fast/visual-viewport/zoomed-fixed-header-and-footer.html [ Failure ] > > fast/visual-viewport/zoomed-fixed-scroll-down-then-up.html [ Failure ] > > fast/visual-viewport/zoomed-fixed.html [ Failure ] > > fast/visual-viewport/zoomed-rects.html [ Failure ] > > ...so these started failing after I _fixed_ the timeouts in the other > viewport tests :( > > It seems these tests currently rely on the viewport tests timing out. I'll > look into these test failures and find a way to fix them. Actually, I'm able to reproduce these failures locally, even without my patch 🤔. I don't quite grok what's going on, but I have a feeling this may be a manifestation of <rdar://problem/50501718>. I'll re-upload my patch to run against EWS again, and see how it fares.
Wenson Hsieh
Comment 6 2019-05-22 16:06:17 PDT
WebKit Commit Bot
Comment 7 2019-05-22 17:41:53 PDT
Comment on attachment 370459 [details] For EWS Clearing flags on attachment: 370459 Committed r245663: <https://trac.webkit.org/changeset/245663>
WebKit Commit Bot
Comment 8 2019-05-22 17:41:55 PDT
All reviewed patches have been landed. Closing bug.
Wenson Hsieh
Comment 9 2019-05-22 20:24:59 PDT
*** Bug 198085 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.